--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,29 @@
     <title>Sample Html</title>
     <link rel="shortcut icon" href="img/bob.jpg" type="image/x-icon">
 </head>
+
 <body>
-    <h1>Hello World</h1>
-    <img src="img/bob.jpg" alt="Bob">
+    <header>
+        <nav>
+            <ul>
+                <li>
+                  <a href="#">Home</a>
+                  <a href="#">Product</a>
+                  <a href="#">Pricing</a>
+                  <a href="#">Contact</a>
+                <li>
+            </ul>
+            <div>
+                <img src="img/Rectangle 4.png" alt="Figma-logo">
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
- 
